Cambiar color por defecto eventos calendario

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2175,7 +2175,7 @@ td.organevent.cal_has_events .popover-content a {
 }
 
 .cal_has_events {
-    background-color: #007BC0;
+    background-color: #A6A6A6;
     text-shadow: none;
     cursor: pointer;
 }
