--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2556,6 +2556,10 @@ body.portaltype-genweb-organs-votacioacord input#form-widgets-title {
     -webkit-animation: spin 2s linear infinite;
 }
 
+body.template-printacta footer#peu #cookies-id {
+  display: none !important;
+}
+
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
   100% { -webkit-transform: rotate(360deg); }
