--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2494,6 +2494,7 @@ body.template-allsessions #portal-column-content table tr:not(.breakline) td:las
     border-top: 0px solid #b2b2b2;
 }
 
+#resultsVotesTab .fa-pencil-square-o:hover,
 #resultsVotesTab .fa-refresh:hover,
 #resultsVotesTab .removeVote:hover {
     color: #557c95;
