--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2596,3 +2596,41 @@ body.portaltype-genweb-organs-votacioacord input#form-widgets-title {
 .estatFirma.cancelada {
     background-color: #FCB7AF;
 }
+
+#infoSend {
+    display: none;
+}
+
+#miniLoaderScreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: #80808033;
+    display: none;
+}
+
+#miniLoaderScreen .loaderBorder {
+    position: fixed;
+    top: calc(50% - 2px);
+    left: calc(50% - 2px);
+    border: 7px solid #0a7fc2;
+    border-radius: 50% !important;
+    width: 35px;
+    height: 35px;
+}
+
+#miniLoaderScreen .loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border: 5px solid #FFFFFF;
+    border-top: 5px solid #007BC1;
+    border-radius: 50% !important;
+    width: 35px;
+    height: 35px;
+    animation: spin 2s linear infinite;
+    -webkit-animation: spin 2s linear infinite;
+}
