--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2631,6 +2631,6 @@ body.portaltype-genweb-organs-votacioacord input#form-widgets-title {
     border-radius: 50% !important;
     width: 35px;
     height: 35px;
-    animation: spin 2s linear infinite;
-    -webkit-animation: spin 2s linear infinite;
+    animation: fa-spin 2s linear infinite;
+    -webkit-animation: fa-spin 2s linear infinite;
 }
