[UPD] Permitir de nuevo rehacer una votación

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2460,7 +2460,7 @@ body.template-allsessions #portal-column-content table tr:not(.breakline) td:las
     cursor: pointer;
 }
 
-.hasVote a.btn {
+.hasVote a.btn.btn-info {
     cursor: initial;
 }
 
@@ -2505,17 +2505,8 @@ body.template-allsessions #portal-column-content table tr:not(.breakline) td:las
     color: #557c95;
 }
 
-.hasVote .btn-notvote,
-.hasVote .btn-notvote:hover {
-    background-color: transparent !important;;
-    background-image: linear-gradient(to bottom, transparent, transparent) !important;
-    color: #999 !important;
-    border: 0px solid #999 !important;
-    filter: none;
-}
-
-.hasVote .btn-info,
-.hasVote .btn-info:hover {
+.puntVoteButtons .btn-info,
+.puntVoteButtons .btn-info:hover {
     background-color: #007bc0a1 !important;;
     background-image: linear-gradient(to bottom, transparent, transparent) !important;
     border: 1px solid #999 !important;
