--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -139,6 +139,7 @@ a.collapsed .icon-chevron-down{
 .containerIcons {
     text-align: center;
     padding: 10px;
+    max-width: 90px;
 }
 
 .containerIcons > i {
