--- a/src/genweb/organs/theme/stylesheets/theme-concat.css
+++ b/src/genweb/organs/theme/stylesheets/theme-concat.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* line 2, ../scss/_edicio.scss */
 b.form-label {
   font-weight: 300;
@@ -197,4 +198,30 @@ body.template-searchorgans .meva-vinculacio a:hover {
 /* line 114, ../scss/_portlet_calendar.scss */
 .portlet-calendar .calendar-event-list .event-item[data-color='gray'] {
   border-left-color: #888;
+}
+
+/* Estilos para mostrar/ocultar el icono correcto en el botón de colapso */
+/* line 2, ../scss/_sessio.scss */
+.btn-expand-collapse .bi-chevron-up {
+  display: none;
+}
+
+/* line 3, ../scss/_sessio.scss */
+.btn-expand-collapse[aria-expanded="true"] .bi-chevron-up {
+  display: inline-block;
+}
+
+/* line 4, ../scss/_sessio.scss */
+.btn-expand-collapse[aria-expanded="true"] .bi-chevron-down {
+  display: none;
+}
+
+/* Estilo para que el botón no parezca un botón y tenga el cursor correcto */
+/* line 7, ../scss/_sessio.scss */
+.btn-expand-collapse {
+  background: none;
+  border: none;
+  padding: 0;
+  color: #557c95;
+  cursor: pointer;
 }
