--- a/src/genweb/organs/theme/stylesheets/theme.css
+++ b/src/genweb/organs/theme/stylesheets/theme.css
@@ -58,155 +58,61 @@ body.template-searchorgans .meva-vinculacio a:hover {
   text-decoration: underline;
 }
 
-/* line 3, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table {
-  border: none;
-  background: transparent;
+/* line 5, ../scss/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table {
+  border: 0px solid transparent !important;
+  border-spacing: 2px !important;
 }
-/* line 6, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table th, .portlet-calendar .table td {
-  text-align: center;
-  vertical-align: middle;
-  border: none;
-  padding: 0.25rem 0.2rem;
-  background: transparent;
+/* line 9, ../scss/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td,
+.portlet.portlet-calendar .card-body table th {
+  padding: .35rem .25rem !important;
 }
 /* line 13, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table th {
-  color: #337ab7;
-  font-weight: 600;
-  background: transparent;
-  border-bottom: 1px solid #e5e5e5;
+.portlet.portlet-calendar .card-body table td.cal_has_events,
+.portlet.portlet-calendar .card-body table th.cal_has_events {
+  color: white;
+  border-top: 0px solid transparent !important;
+  border-bottom: 0px solid transparent !important;
 }
-/* line 19, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event {
-  min-width: 2.2em;
-  min-height: 2.2em;
-  position: relative;
+/* line 18, ../scss/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td.cal_has_events button,
+.portlet.portlet-calendar .card-body table th.cal_has_events button {
+  color: white;
+  text-decoration: none;
 }
 /* line 23, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.today {
-  border: 2px solid #337ab7;
-  border-radius: 50%;
+.portlet.portlet-calendar .card-body table td.cal_has_events:hover,
+.portlet.portlet-calendar .card-body table th.cal_has_events:hover {
+  filter: brightness(80%);
 }
 /* line 27, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.cal_has_events {
-  border-radius: 6px;
-  font-weight: 600;
-  opacity: 0.85;
-  transition: opacity 0.2s ease-in-out;
+.portlet.portlet-calendar .card-body table td.cal_has_events .event-multiple::before,
+.portlet.portlet-calendar .card-body table th.cal_has_events .event-multiple::before {
+  content: "+";
+  position: absolute;
+  font-size: 1rem;
+  bottom: -12px;
+  right: -10px;
 }
-/* line 32, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.cal_has_events:hover {
-  opacity: 1;
+/* line 41, ../scss/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end i::before {
+  font-weight: 600 !important;
 }
-/* line 35, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.cal_has_events .calendar-events {
-  margin-top: 0.2em;
-  background: #f5f5f5;
-  border-radius: 6px;
-  padding: 0.2em 0.4em;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.03);
-}
-/* line 42, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.cal_has_events a, .portlet-calendar .table td.event.cal_has_events button {
-  color: #333;
-  font-weight: 700;
-}
-/* line 46, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.cal_has_events .event-time {
-  color: #888;
-  font-size: 0.95em;
-  font-weight: 400;
+/* line 49, ../scss/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end a,
+.portlet.portlet-calendar .calendar-event-list a {
+  text-decoration: none;
 }
 /* line 52, ../scss/_portlet_calendar.scss */
-.portlet-calendar .table td.event.cal_next_month, .portlet-calendar .table td.event.cal_prev_month {
-  color: #bfc9d1;
-  background: #f8f9fa !important;
-}
-/* line 58, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-events {
-  font-size: 0.95em;
-  text-align: left;
-}
-/* line 61, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-events li {
-  margin-bottom: 0.1em;
-}
-/* line 63, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-events li a {
-  font-weight: 600;
-  color: #333;
-}
-/* line 67, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-events li .event-time {
-  color: #888;
-  font-size: 0.95em;
-  font-weight: 400;
-}
-/* line 74, ../scss/_portlet_calendar.scss */
-.portlet-calendar .btn-link {
-  color: #337ab7;
+.portlet.portlet-calendar .text-end a:hover,
+.portlet.portlet-calendar .calendar-event-list a:hover {
   text-decoration: underline;
-  font-size: 1em;
-  font-weight: 600;
 }
-/* line 79, ../scss/_portlet_calendar.scss */
-.portlet-calendar .btn-link:hover {
-  color: #23527c;
-}
-/* line 83, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list {
-  margin-top: 1rem;
-}
-/* line 85, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item {
-  border-left: 5px solid #337ab7;
-  background: #fff;
-  margin-bottom: 0.7em;
-  padding: 0.7em 1em 0.7em 0.8em;
-  border-radius: 6px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
-  font-size: 1em;
-}
-/* line 93, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item .fw-bold {
-  font-weight: 700;
-}
-/* line 96, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item .text2 {
-  color: #888;
-  font-size: 0.95em;
-}
-/* line 100, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item .bi-calendar {
-  color: #888;
-  margin-right: 0.3em;
-}
-/* line 104, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item .fa-thumb-tack {
-  color: #bbb;
-  margin-right: 0.3em;
-}
-/* line 110, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item[data-color='orange'] {
-  border-left-color: #f39c12;
-}
-/* line 111, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item[data-color='green'] {
-  border-left-color: #27ae60;
-}
-/* line 112, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item[data-color='blue'] {
-  border-left-color: #2980b9;
-}
-/* line 113, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item[data-color='red'] {
-  border-left-color: #e74c3c;
-}
-/* line 114, ../scss/_portlet_calendar.scss */
-.portlet-calendar .calendar-event-list .event-item[data-color='gray'] {
-  border-left-color: #888;
+/* line 56, ../scss/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end a.text-dark,
+.portlet.portlet-calendar .calendar-event-list a.text-dark {
+  color: #212529 !important;
 }
 
 /* Estilos para mostrar/ocultar el icono correcto en el botón de colapso */
