[UPD] organgovern content

--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -17,7 +17,7 @@
 .label-en_correccio,
 .restricted_to_members_organ,
 .label-restricted_to_members_organ {
-  padding: 1px 4px 2px !important;
+  padding: 1px 4px 2px;
   border-radius: 3px !important;
   font-weight: bold !important;
   line-height: 14px !important;
