--- a/src/genweb/organs/theme/stylesheets/theme-concat.css
+++ b/src/genweb/organs/theme/stylesheets/theme-concat.css
@@ -58,89 +58,6 @@ body.template-searchorgans .meva-vinculacio a:hover {
   text-decoration: underline;
 }
 
-/* line 5, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .card-body table {
-  border: 0px solid transparent !important;
-  border-spacing: 2px !important;
-}
-/* line 9, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .card-body table td,
-.portlet.portlet-calendar .card-body table th {
-  padding: .35rem .25rem !important;
-}
-/* line 13, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .card-body table td.cal_has_events,
-.portlet.portlet-calendar .card-body table th.cal_has_events {
-  color: white;
-  border-top: 0px solid transparent !important;
-  border-bottom: 0px solid transparent !important;
-}
-/* line 18, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .card-body table td.cal_has_events button,
-.portlet.portlet-calendar .card-body table th.cal_has_events button {
-  color: white;
-  text-decoration: none;
-}
-/* line 23, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .card-body table td.cal_has_events:hover,
-.portlet.portlet-calendar .card-body table th.cal_has_events:hover {
-  filter: brightness(80%);
-}
-/* line 27, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .card-body table td.cal_has_events .event-multiple::before,
-.portlet.portlet-calendar .card-body table th.cal_has_events .event-multiple::before {
-  content: "+";
-  position: absolute;
-  font-size: 1rem;
-  bottom: -12px;
-  right: -10px;
-}
-/* line 41, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .text-end i::before {
-  font-weight: 600 !important;
-}
-/* line 49, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .text-end a,
-.portlet.portlet-calendar .calendar-event-list a {
-  text-decoration: none;
-}
-/* line 52, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .text-end a:hover,
-.portlet.portlet-calendar .calendar-event-list a:hover {
-  text-decoration: underline;
-}
-/* line 56, ../scss/_portlet_calendar.scss */
-.portlet.portlet-calendar .text-end a.text-dark,
-.portlet.portlet-calendar .calendar-event-list a.text-dark {
-  color: #212529 !important;
-}
-
-/* Estilos para mostrar/ocultar el icono correcto en el botón de colapso */
-/* line 2, ../scss/_sessio.scss */
-.btn-expand-collapse .bi-chevron-up {
-  display: none;
-}
-
-/* line 3, ../scss/_sessio.scss */
-.btn-expand-collapse[aria-expanded="true"] .bi-chevron-up {
-  display: inline-block;
-}
-
-/* line 4, ../scss/_sessio.scss */
-.btn-expand-collapse[aria-expanded="true"] .bi-chevron-down {
-  display: none;
-}
-
-/* Estilo para que el botón no parezca un botón y tenga el cursor correcto */
-/* line 7, ../scss/_sessio.scss */
-.btn-expand-collapse {
-  background: none;
-  border: none;
-  padding: 0;
-  color: #557c95;
-  cursor: pointer;
-}
-
 /* line 1, ../scss/_generic.scss */
 .convocada,
 .label-convocada,
@@ -161,7 +78,7 @@ body.template-searchorgans .meva-vinculacio a:hover {
 .label-en_correccio,
 .restricted_to_members_organ,
 .label-restricted_to_members_organ {
-  padding: 1px 4px 2px !important;
+  padding: 1px 4px 2px;
   border-radius: 3px !important;
   font-weight: bold !important;
   line-height: 14px !important;
@@ -213,4 +130,97 @@ body.template-searchorgans .meva-vinculacio a:hover {
 .restricted_to_members_organ,
 .label-restricted_to_members_organ {
   background-color: #a62e1f !important;
+}
+
+/* line 5, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table {
+  border: 0px solid transparent !important;
+  border-spacing: 2px !important;
+}
+/* line 9, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td,
+.portlet.portlet-calendar .card-body table th {
+  padding: .35rem .25rem !important;
+}
+/* line 13, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td.cal_has_events,
+.portlet.portlet-calendar .card-body table th.cal_has_events {
+  color: white;
+  border-top: 0px solid transparent !important;
+  border-bottom: 0px solid transparent !important;
+}
+/* line 18, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td.cal_has_events button,
+.portlet.portlet-calendar .card-body table th.cal_has_events button {
+  color: white;
+  text-decoration: none;
+}
+/* line 23, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td.cal_has_events:hover,
+.portlet.portlet-calendar .card-body table th.cal_has_events:hover {
+  filter: brightness(80%);
+}
+/* line 27, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .card-body table td.cal_has_events .event-multiple::before,
+.portlet.portlet-calendar .card-body table th.cal_has_events .event-multiple::before {
+  content: "+";
+  position: absolute;
+  font-size: 1rem;
+  bottom: -12px;
+  right: -10px;
+}
+/* line 41, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end i::before {
+  font-weight: 600 !important;
+}
+/* line 49, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end a,
+.portlet.portlet-calendar .calendar-event-list a {
+  text-decoration: none;
+}
+/* line 52, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end a:hover,
+.portlet.portlet-calendar .calendar-event-list a:hover {
+  text-decoration: underline;
+}
+/* line 56, ../scss/portlets/_portlet_calendar.scss */
+.portlet.portlet-calendar .text-end a.text-dark,
+.portlet.portlet-calendar .calendar-event-list a.text-dark {
+  color: #212529 !important;
+}
+
+/* line 5, ../scss/content/_organgovern.scss */
+body.portaltype-genweb-organs-organgovern #contentOrgan .reorder {
+  top: -38px;
+}
+/* line 8, ../scss/content/_organgovern.scss */
+body.portaltype-genweb-organs-organgovern #contentOrgan .reorder a:hover i::before,
+body.portaltype-genweb-organs-organgovern #contentOrgan .reorder a:hover {
+  font-weight: 700 !important;
+}
+
+/* line 1, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio {
+  /* Estilos para mostrar/ocultar el icono correcto en el botón de colapso */
+  /* Estilo para que el botón no parezca un botón y tenga el cursor correcto */
+}
+/* line 4, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio .btn-expand-collapse .bi-chevron-up {
+  display: none;
+}
+/* line 5, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio .btn-expand-collapse[aria-expanded="true"] .bi-chevron-up {
+  display: inline-block;
+}
+/* line 6, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio .btn-expand-collapse[aria-expanded="true"] .bi-chevron-down {
+  display: none;
+}
+/* line 9, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio .btn-expand-collapse {
+  background: none;
+  border: none;
+  padding: 0;
+  color: #557c95;
+  cursor: pointer;
 }
