--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -85,3 +85,18 @@
     display: none;
   }
 }
+
+.text-bg-signada {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-success-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-pendent {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-warning-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-rebutjada {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-danger-rgb), var(--bs-bg-opacity, 1)) !important;
+}
